--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/swiper": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.64.1",
+    "swiper": "9.4.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
